# CS3235-bitcoin-rust

./: .gitignore  Cargo.toml  README.md  random_policy_gen.py  run_four.sh  run_one.sh  save_four.sh  stop_four.sh  submission_cleanup.sh  test_pipe.sh
bin_client/: .gitignore  Cargo.toml
bin_client/policies/: seccomp_all_allow.json  seccomp_all_deny.json  seccomp_client.json  seccomp_nakamoto.json  seccomp_wallet.json
bin_client/src/: app.rs  main.rs
bin_nakamoto/: Cargo.toml
bin_nakamoto/src/: main.rs  nakamoto.rs
bin_wallet/: Cargo.toml
bin_wallet/src/: main.rs  wallet.rs
lib_chain/: Cargo.toml  README.md
lib_chain/src/: block.rs  lib.rs
lib_chain/testdata/: add_blocks_basic__1.json  add_blocks_basic__2.json  add_blocks_basic__3.json  add_blocks_basic__4.json  add_blocks_basic__5.json  add_blocks_basic__6.json  add_blocks_basic__7.json  add_blocks_basic__8.json
lib_miner/: Cargo.toml
lib_miner/src/: lib.rs  miner.rs
lib_network/: Cargo.toml
lib_network/src/: lib.rs  netchannel.rs  p2pnetwork.rs
lib_tx_pool/: Cargo.toml
lib_tx_pool/src/: lib.rs  pool.rs
lib_tx_pool/testdata/: txs_0.json
tests/_bots/: botA-0.jsonl  botA-1.py
tests/_secrets/: Wallet.A.json  Wallet.B.json  Wallet.C.json  Wallet.D.json
tests/cli_test_nakamoto/: BlockTree.json  Config.json  TxPool.json  cli_test_nakamoto.sh  cli_test_nakamoto_0.input  cli_test_nakamoto_0.output.expected  stdio.input  stdio_no_neighbor.input  test.sh
tests/cli_test_wallet/: cli_test_wallet_0.input  cli_test_wallet_0.output.expected  cli_test_wallet_0.sh
tests/nakamoto_config1/: Config.json
tests/nakamoto_config1_alone/: Config.json
tests/nakamoto_config2/: Config.json  TxPool.json
tests/nakamoto_config3/: BlockTree.json  Config.json
tests/nakamoto_config4/: Config.json
