[package]
name = "bin_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin_client"
path = "./src/main.rs"

[dependencies]
seccompiler = {version = "0.3.0", features = ["json"]}
tui = "0.19.0"
tui-textarea = "0.2.0"
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"