[package]
name = "bin_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin_wallet"
path = "./src/main.rs"

[dependencies]
seccompiler = {version = "0.3.0", features = ["json"]}
rsa = "0.7.2"
sha2 = { version = "0.10.6", features = ["oid"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64ct = "1.5.3"