[package]
name = "lib_tx_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
lib_chain = { path = "../lib_chain" }
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
